--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext.kotlin_version = '1.3.10'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -25,4 +25,25 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+
+    support_version = '1.0.2'
+
+    lifecycle_extensions_version = '2.0.0'
+
+    rxjava_version = '2.1.14'
+    rx_android_version = '2.0.2'
+    retrofit_version = '2.4.0'
+    okhttp_logging_version = '3.10.0'
+
+    dagger_version = '2.16'
+    glide_version = '4.8.0'
+
+    photo_view_version = '2.1.3'
+
+    anko_version = '0.10.8'
+
+    jsoup_version = '1.11.3'
 }
